updated button label

--- a/USB/menu.html
+++ b/USB/menu.html
@@ -47,7 +47,7 @@
     <!-- Windows Submenu -->
     <div id="windowsMenu" class="submenu">
         <h3>Windows Tools</h3>
-        <a href="Windows\Prank\Nyan\payload\deploy.bat" class="button">Run Lock Screen</a>
+        <a href="Windows\Prank\Nyan\payload\deploy.bat" class="button">NyanScreen :3</a>
         <button class="button" onclick="backToMain()">Back</button>
     </div>
 
